--- a/vinyl/index.html
+++ b/vinyl/index.html
@@ -16,7 +16,7 @@
     </div>    
       <nav id="mainNav">
         <a href="index.html">
-          <div>
+          <div style="margin-top: 10px;"> 
             Главная
           </div>
         </a>
@@ -26,7 +26,7 @@
           </div>
         </a>
         <a href="page2.html">
-          <div>
+          <div style="margin-top: 10px;"> 
             Проигрыватели
                   </div>
         </a>
@@ -88,7 +88,7 @@
           <p class="name_ar">Интернет-магазин</p>
           <p class="cost_ar">Телефон: <span class="person_ar">+375-29-826-12-21</span></p>
           <p class="inf_ar">
-            Оформление заявок через корзину сайта - КРУГЛОСУТОЧНО
+            Оформление заявок через корзину сайта - КРУГЛОСУТОЧНО <br>
             Режим работы: 11:00 – 19:00 пн-пт (ул. Белорусская, д. 20)
           </p>
         </div>
