--- a/vinyl/page2.html
+++ b/vinyl/page2.html
@@ -18,23 +18,23 @@
 		<div id="mainLogo">
 			<img src="data:image/svg+xml,%3Csvg width='800px' height='800px' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='SVGRepo_bgCarrier' stroke-width='0'%3E%3C/g%3E%3Cg id='SVGRepo_tracerCarrier' stroke-linecap='round' stroke-linejoin='round'%3E%3C/g%3E%3Cg id='SVGRepo_iconCarrier'%3E%3Ccircle cx='12' cy='12' r='3' stroke='%23000000' stroke-width='1.5'/%3E%3Cpath d='M21.9506 13.0004C21.4489 18.0538 17.1853 22.0004 12 22.0004C6.47715 22.0004 2 17.5233 2 12.0004C2 6.81508 5.94668 2.55153 11 2.0498' stroke='%23000000' stroke-width='1.5' stroke-linecap='round'/%3E%3Cpath d='M15 11.9992V2.45703C18.1101 3.43385 20.5654 5.88916 21.5422 8.99923' stroke='%23000000' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/g%3E%3C/svg%3E">
 		</div>  
-		<nav id="mainNav">
-		  <a href="index.html">
-			<div>
-			  Главная
-			</div>
-		  </a>
-		  <a href="index.html">
-			<div>
-			  Виниловые пластинки
-			</div>
-		  </a>
-		  <a href="players.html">
-			<div>
-			  Проигрыватели
-					</div>
-		  </a>
-		</nav>
+        <nav id="mainNav">
+            <a href="index.html">
+              <div style="margin-top: 20px;"> 
+                Главная
+              </div>
+            </a>
+            <a href="page1.html">
+              <div>
+                Виниловые пластинки
+              </div>
+            </a>
+            <a href="page2.html">
+              <div style="margin-top: 20px;"> 
+                Проигрыватели
+                      </div>
+            </a>
+          </nav>
 	  </header>
 
     <main id="mainContent">
